# ntcl-tensor

./: Makefile  README.md  build.info
src/modules/: CMakeLists.txt
src/modules/api/: CMakeLists.txt  default_tap_factory.F90  tensor_api.f90  tensor_dev.f90  tensor_initializer.f90
src/modules/construction/: CMakeLists.txt  tensor_builder.f90  tensor_builder_factory.f90  tensor_builder_interface.f90  tensor_construction_api.f90
src/modules/converter/: CMakeLists.txt  tensor_c_pointer_converter.f90  tensor_converter_factory.f90  tensor_converter_interface.f90  tensor_fortran_converter.f90
src/modules/cuda_primitives/: cuda_tap_driver.f90  cuda_tap_impl.cu  cuda_tap_plugin.f90
src/modules/hip_primitives/: hip_tap_driver.f90  hip_tap_impl.hip  hip_tap_plugin.f90
src/modules/initializer/: CMakeLists.txt  random_initializer.f90  tensor_initializer.f90  tensor_initializer_api.f90
src/modules/primitives/: CMakeLists.txt  intrinsic_tap.f90  tap_factory.f90  tensor_arithmetic_primitives.f90  tensor_arithmetic_primitives_api.f90  tensor_arithmetic_primitives_dev.f90
src/modules/tensor/: CMakeLists.txt  matrix.f90  scalar.f90  tensor.f90  tensor_array_element.f90  tensor_datatype_helper.f90  tensor_datatypes.f90  tensor_factory.f90  tensor_package_api.f90  tensor_rank3.f90  tensor_rank4.f90  tensor_rank5.f90  tscalar.f90  vector.f90
src/test/: CMakeLists.txt
src/test/api/: CMakeLists.txt
src/test/construction/: CMakeLists.txt  construction_package_test.f90  tensor_builder_interface_test.f90  tensor_builder_test_helper.f90  test.info
src/test/converter/: CMakeLists.txt  converter_package_test.f90
src/test/cuda_primitives/: cuda_primitives_package_test.f90
src/test/hip_primitives/: hip_primitives_package_test.f90
src/test/initializer/: CMakeLists.txt  initializer_package_test.f90
src/test/primitives/: CMakeLists.txt  primitives_package_test.f90  tensor_arithmetic_primitives_test.f90  tensor_arithmetic_primitives_test_helper.f90  test.info
src/test/tensor/: CMakeLists.txt  matrix_test.f90  tensor_package_test.f90  tensor_rank3_test.f90  tensor_rank4_test.f90  tensor_rank5_test.f90  test.info  tscalar_test.f90  vector_test.f90
src/test/unittest/: CMakeLists.txt  unittest.F90  unittest.f90
