add_library(
    ntcl_tensor_construction_test
    construction_package_test.f90
    tensor_builder_interface_test.f90
    tensor_builder_test_helper.f90
)
add_library(ntcl_tensor::construction_test ALIAS ntcl_tensor_construction_test)
target_include_directories(
    ntcl_tensor_construction_test
    PUBLIC
    ${CMAKE_CURRENT_BINARY_DIR}
)
target_link_libraries(
    ntcl_tensor_construction_test
    PUBLIC
    ntcl_util::api
    ntcl_data::api
    ntcl_tensor_api
)
